--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ background-image:url(./tcs4.jpg);
 
 <section class="thirdsection">
     <div class="box-main">
-       <div">
+       <div>
            <h1  style=color:black; "text-big">BUILDING FUTURE-READY CYBER RESILIENT BUSINESSES</h1>
            <p  style="color:rgb(0, 0, 0);"><strong>The increasing adoption of cloud and ever-evolving cyber-attacks are
                <br>
